# Path_Tracing

./: .gitignore  AGENTS.md  CHANGELOG_2026-04-07.md  CLAUDE.md  CMakeLists.txt  Dependency.cmake  MERGE_STATUS.md  NRD_BLACK_OUTPUT_DEBUG.md  NRD_INTEGRATION_PLAN.md  NRD_QUALITY_DIAGNOSIS_2026-05.md  P6_CAP_MERGE.md  P6_DIAGNOSIS.md  P6_HANDOFF.md  REFACTORING.md  SCENE_GUIDE.md  SCENE_REFACTOR.md  STATUS.md  build_log.txt
cmake/: patch_nrd.cmake
hdri/: ._moonless_golf_4k.hdr
model/: generate_night_street.py  night_street.mtl
shader/: BRDF.hlsli  Composite.hlsl  Intersection.hlsli  NrdFrontend.hlsli  PathTracer.hlsl  Scene.hlsli  Tonemap.hlsl  Utility.hlsli  common.hlsli
src/: EnergyLUT.cpp  EnergyLUT.h  EnvMap.cpp  EnvMap.h  buffer.cpp  buffer.h  bvh.cpp  bvh.h  common.h  compute_program.cpp  compute_program.h  context.cpp  context.h  energy_lut.cpp  energy_lut.h  env_map.cpp  env_map.h  gltf_loader.cpp  gltf_loader.h  image.cpp  image.h  main.cpp  mesh.cpp  mesh.h  model.cpp  model.h  nrd_denoiser.cpp  nrd_denoiser.h  scene_desc.cpp  scene_desc.h  shader.cpp  shader.h  texture.cpp  texture.h
tools/: p5_3c_capture.ps1  p5_3c_metrics.py
